# progs

./: .gitignore  README.md  interface.py
cmake/conditional-preprocessing/: CMakeLists.txt  method1.f90  method2.f90
cmake/ctest/: CMakeLists.txt  main.f90
cmake/link-OpenMP/: CMakeLists.txt  test_code.f90
cmake/link-lapack/: CMakeLists.txt  test_scoopy.f90
fft-matlabvspython/: script.m  script.py
fortran/binary-writing/: read_binary.py  test_code.f90
fortran/debugging-tools/: debug_function.f90
fortran/eigenvalues-vectors/: CMakeLists.txt  EVev-hermitianmat.f90  EVev-symmetricmat.f90
fortran/fft/: CMakeLists.txt  testDFTi.f90  test_code.f90
gui-programming/: mygui.py
latex/code-snippet/: pretty_tables.tex
matlab-python/periodogram-welch-blockPSD/: script.py  xt_histo
matlab/debug-tools/: read_matrix.m
python/: debug_functions.py  interactive-plotting.py
stochastics/PSD-scaling-variance/: Newmark123.m  PSD_Scaling_Variance.m  WindGenSN.m
